# -------------------------------------------------------------
# file: CMakeLists.txt
# -------------------------------------------------------------
# -------------------------------------------------------------
# Copyright (c) 2017 Battelle Memorial Institute
# Licensed under modified BSD License. A copy of this license can be
# found in the LICENSE file in the top level directory of this
# distribution.
# -------------------------------------------------------------
# -------------------------------------------------------------
# Created July 10, 2022 by Bill Perkins
# Last Change: 2022-07-10 07:49:09 perk
# -------------------------------------------------------------

add_executable(cart_grid elevtbl.f90 cartgrid.f90)
